// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly: list element 1`] = `
<div>
  <List
    aria-label="project_plural"
    autoHeight={true}
    estimatedRowSize={30}
    height={200}
    isScrolling={false}
    noRowsRenderer={[Function]}
    onRowsRendered={[Function]}
    onScroll={[Function]}
    overscanIndicesGetter={[Function]}
    overscanRowCount={2}
    rowCount={2}
    rowHeight={205}
    rowRenderer={[Function]}
    scrollToAlignment="auto"
    scrollToIndex={-1}
    scrollTop={0}
    style={
      {
        "outline": "none",
      }
    }
    tabIndex={-1}
    width={200}
  />
</div>
`;

exports[`renders correctly: row element 1`] = `
<div
  role="row"
  style={
    {
      "height": 185,
    }
  }
>
  <div
    className="sw-h-full"
    role="gridcell"
  >
    <ProjectCard
      currentUser={
        {
          "isLoggedIn": true,
        }
      }
      project={
        {
          "key": "foo",
          "name": "Foo",
        }
      }
      type="overall"
    />
  </div>
</div>
`;

exports[`renders different types of "no projects" 1`] = `
<div
  className="it__projects-list"
>
  <withRouter(EmptyInstance)
    currentUser={
      {
        "isLoggedIn": true,
      }
    }
  />
</div>
`;

exports[`renders different types of "no projects" 2`] = `
<div
  className="it__projects-list"
>
  <EmptySearch />
</div>
`;

exports[`renders different types of "no projects" 3`] = `
<div
  className="it__projects-list"
>
  <NoFavoriteProjects />
</div>
`;
